# tabpfn-client

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements-test.txt  requirements.txt  ruff.toml
.github/: dependabot.yml
.github/workflows/: cache_trunk.yaml  linters.yaml  pull_request.yml
.trunk/: trunk.yaml
.trunk/scripts/: pyright_to_sarif.py  ruff_to_sarif.py
examples/sagemaker/: tabpfn-3-sample.ipynb
scripts/: gen_requirements.py
src/tabpfn_client/: __init__.py  api_models.py  browser_auth.py  client.py  config.py  constants.py  estimator.py  options.py  prompt_agent.py  server_config.yaml  service_wrapper.py  settings.py  ui.py  utils.py
src/tabpfn_client/.tabpfn/: dataset_cache
src/tabpfn_client/foundry/: __init__.py  estimator.py
src/tabpfn_client/sagemaker/: __init__.py  estimator.py
src/tabpfn_client/sdks/gapi/: __init__.py  models_gen.py  typed_dicts_gen.py
tabpfn_client/: __init__.py  client.py  config.py  constants.py  estimator.py  mock_prediction.py  prompt_agent.py  server_config.yaml  service_wrapper.py  state_manager.py  ui.py
tabpfn_client/tests/: quick_test.py  quick_test_v1.py
tabpfn_client/tests/unit/: test_client.py  test_mock_prediction.py  test_prompt_agent.py  test_tabpfn_classifier.py  test_tabpfn_regressor.py
tests/: mock_tabpfn_server.py  quick_test.py  quick_test_v1.py  quick_test_v2.py
tests/integration/: test_server_config.py  test_tabpfn_classifier.py
tests/unit/: test_browser_auth.py  test_client.py  test_estimator.py  test_options.py  test_response_validation.py  test_service_wrapper.py  test_tabpfn_classifier.py  test_tabpfn_regressor.py  test_thinking_validation.py
